Fix demobrowser to not crash when switching to private browsing mode

Old QWebEnginePage is destructed by the QWebEngineView::setPage() call.
No need to destruct it explicitly.

Task-number: QTBUG-62147
Change-Id: I8ec33d5df618f69e4acf1667490df4a67dad9a16
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>
Reviewed-by: Kai Koehne <kai.koehne@qt.io>